...
                article = article,
                isBookmarkedFlow = viewModel.isArticleBookmarked(article.url),
                onArticleClick = onArticleClick,
                onBookmarkToggle = { currentArticle, isNowBookmarked ->
                    viewModel.onBookmarkCheckedChange(currentArticle, isNowBookmarked)
                },
                modifier = Modifier.testTag("headlines_list_item")
            )
        }
    }
}

@Preview(showBackground = true, name = "Headlines List Preview")
...
