...
                    modifier = Modifier.fillMaxWidth()
                )
            }

            WebView(
                state = webViewState,
                modifier = Modifier.weight(1f).testTag("webview"),
                navigator = webViewNavigator,
                onCreated = { createdWebView ->
                    createdWebView.settings.javaScriptEnabled = true
                    createdWebView.settings.allowFileAccess = true

                    // some websites require dom storage
...
